# Phylosophers

./: CMakeLists.txt  Makefile  Note.md  README.md  main.c
include/: check.h  philos.h  utils.h
philo/: Makefile  main.c
philo/include/: check.h  philos.h  utils.h
philo/src/check/: check_life.c
philo/src/philos/: actions.c  create_philos.c  free_philos.c  mutex.c  philos.c  thread_philos.c
philo/src/utils/: message.c  phi_atoi.c  time.c
src/check/: check_input.c  check_life.c  check_meals.c  check_philos.c
src/philos/: actions.c  check_life.c  check_meals.c  check_philos.c  create_philos.c  fork_actions.c  free_philos.c  mutex.c  philos.c  single_philo.c  thread_philos.c
src/utils/: errors.c  message.c  phi_atoi.c  phi_calloc.c  phi_sleep.c  phi_strlen.c  phi_strncmp.c  prints.c  time.c
